--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         crossorigin="anonymous"
       />
 
-      <link rel="stylesheet" href="../CSS/style.css"/>
+      <link rel="stylesheet" href="CSS/style.css"/>
       <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet">    </head>
 
   <body>
       <div class="container-fluid banner text-center">
           <div class="row">
             <div class="col align-self-center">
-                <img src="../Images/logo-8.png">
+                <img src="Images/logo-8.png">
                 <!-- <h2 class="info-b">Good Food, Great Ambience</h2> -->
             </div>
         </div>
