font size and image size changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       />
 
       <link rel="stylesheet" href="CSS/style.css"/>
-      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet">    </head>
+      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet">  
+      </head>
 
   <body>
       <div class="container-fluid banner text-center">
