Added contact divs

--- a/index.html
+++ b/index.html
@@ -96,14 +96,31 @@
               </div>
             </form>
         </div>
-<!-- 
-        <div class="container-fluid">
-            <div class="row">
-              <div class="col parallax">
-                    <h1>Don't Panic</h1>
-              </div>
+
+        <div class="container-fluid contact-container">
+          <div class="row">
+            <div class="col-md-3 contact1">
+              <p class="contact-heading">Contact</p>
+              <p>2345 Hill Ave</p>
+              <p>Regina, Saskatchewan</p>
+              <p>ASD 345</p>
+              <p>momohouse@gmail.com</p>
           </div>
-        </div> -->
+
+          <div class="col-md-3 contact2">
+            <p class="contact-heading">Opening Hours</p>
+            <p>Monday-Fridays</p>
+            <p>10:00AM - 9:00PM</p>
+            <p>Saturdays, Sundays</p>
+            <p>12:00AM - 8:00PM</p>
+        </div>
+        <div class="col-md-6">
+          <img src="Images/background-3.jpg">
+
+      </div>
+
+        </div>
+
 
     
 
