--- a/index.html
+++ b/index.html
@@ -51,53 +51,53 @@
         </nav>
       </div>
 
-        <div class="container-fluid jumbotron parallax text-center">
-            <div class="row bon-apetit">
-                <div class="col">
-                    <h1 class="parallax-text">Bon</h1>
-                    <h1 class="parallax-text">Apetit!</h1>
-                </div>
-            </div>
-            <form>
-              <div class="form-row d-flex justify-content-center align-items-center">
-                <div class="col-auto">
-                  <input class="form-control" type="date" value="2020-03-09">
-                </div>
+      <div class="container-fluid jumbotron parallax text-center">
+          <div class="row bon-apetit">
+              <div class="col">
+                  <h1 class="parallax-text">Bon</h1>
+                  <h1 class="parallax-text">Apetit!</h1>
+              </div>
+          </div>
+          <form>
+            <div class="form-row d-flex justify-content-center align-items-center">
+              <div class="col-auto">
+                <input class="form-control" type="date" value="2020-03-09">
+              </div>
 
-                <div class="col-auto my-1">
-                  <!-- 0 <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
-                    <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                      <option selected>12:00 PM</option>
-                      <option value="1">12:00 PM</option>
-                      <option value="2">12:30 PM</option>
-                      <option value="3">1:00 PM</option>
-                      <option value="4">1:30 PM</option>
-
-                    </select>
-                  </div>
-                <div class="col-auto my-1">
-                  <!-- <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
+              <div class="col-auto my-1">
+                <!-- 0 <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                    <option selected>1 person</option>
-                    <option value="1">1 person</option>
-                    <option value="2">2 people</option>
-                    <option value="3">3 people</option>
-                    <option value="4">4 people</option>
-                    <option value="5">5 people</option>
-                    <option value="6">6 people</option>
-                    <option value="7">7 people</option>
+                    <option selected>12:00 PM</option>
+                    <option value="1">12:00 PM</option>
+                    <option value="2">12:30 PM</option>
+                    <option value="3">1:00 PM</option>
+                    <option value="4">1:30 PM</option>
 
                   </select>
                 </div>
+              <div class="col-auto my-1">
+                <!-- <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
+                <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                  <option selected>1 person</option>
+                  <option value="1">1 person</option>
+                  <option value="2">2 people</option>
+                  <option value="3">3 people</option>
+                  <option value="4">4 people</option>
+                  <option value="5">5 people</option>
+                  <option value="6">6 people</option>
+                  <option value="7">7 people</option>
 
-                <div class="col-auto my-1">
-                  <button type="submit" class="btn btn-primary">Reserve</button>
-                </div>
+                </select>
               </div>
-            </form>
-        </div>
 
-        <div class="container-fluid contact-container">
+              <div class="col-auto my-1">
+                <button type="submit" class="btn btn-primary">Reserve</button>
+              </div>
+            </div>
+          </form>
+      </div>
+
+      <div class="container-fluid contact-container">
           <div class="row">
             <div class="col-md-3 contact1">
               <p class="contact-heading">Contact</p>
@@ -111,15 +111,14 @@
             <p class="contact-heading">Opening Hours</p>
             <p>Monday-Fridays</p>
             <p>10:00AM - 9:00PM</p>
-            <p>Saturdays, Sundays</p>
+            <p>Saturdays,</p>
             <p>12:00AM - 8:00PM</p>
         </div>
         <div class="col-md-6">
           <img src="Images/background-3.jpg">
+        </div>
 
       </div>
-
-        </div>
 
 
     
