--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
       />
 
       <link rel="stylesheet" href="CSS/style.css"/>
-      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet">  
-      </head>
+      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet"/>  
+  </head>
 
   <body>
       <div class="container-fluid banner text-center">
           <div class="row">
             <div class="col align-self-center">
                 <img src="Images/logo-8.png">
-                <!-- <h2 class="info-b">Good Food, Great Ambience</h2> -->
             </div>
         </div>
       </div>
@@ -65,7 +64,6 @@
               </div>
 
               <div class="col-auto my-1">
-                <!-- 0 <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>12:00 PM</option>
                     <option value="1">12:00 PM</option>
@@ -76,7 +74,6 @@
                   </select>
                 </div>
               <div class="col-auto my-1">
-                <!-- <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label> -->
                 <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                   <option selected>1 person</option>
                   <option value="1">1 person</option>
@@ -95,9 +92,9 @@
               </div>
             </div>
           </form>
-      </div>
+       </div>
 
-      <div class="container-fluid contact-container">
+      <div class="container contact-container">
           <div class="row">
             <div class="col-md-3 contact1">
               <p class="contact-heading">Contact</p>
@@ -105,23 +102,51 @@
               <p>Regina, Saskatchewan</p>
               <p>ASD 345</p>
               <p>momohouse@gmail.com</p>
-          </div>
+            </div>
 
-          <div class="col-md-3 contact2">
-            <p class="contact-heading">Opening Hours</p>
-            <p>Monday-Fridays</p>
-            <p>10:00AM - 9:00PM</p>
-            <p>Saturdays,</p>
-            <p>12:00AM - 8:00PM</p>
-        </div>
-        <div class="col-md-6">
-          <img src="Images/background-3.jpg">
-        </div>
-
+            <div class="col-md-3 contact2">
+              <p class="contact-heading">Opening Hours</p>
+              <p>Monday-Fridays</p>
+              <p>10:00AM - 9:00PM</p>
+              <p>Saturdays,</p>
+              <p>12:00AM - 8:00PM</p>
+            </div>
+            <div class="col-md-6 map">
+              <img src="Images/background-3.jpg"/>
+            </div>
+          </div>          
       </div>
 
 
-    
+     <div class="container gallery-container">
+        <div class="row gallery-row">
+          <div class="col-md-4 gallery-item">
+            <div class="thumbnail">
+            <img class="img-responsive" src="Images/momo-7.jpg"/>
+            <img class="img-responsive" src="Images/momo-2.jpg"/>
+
+
+
+            </div>
+          </div>
+          <div class="col-md-4 gallery-item">
+            <div class="thumbnail">
+              <img class="img-responsive" src="Images/momo-5.jpg"/>
+
+              <img class="img-responsive"src="Images/momo-4.jpg"/>
+
+            </div>
+          </div>
+          <div class="col-md-4 gallery-item">
+            <div class="thumbnail">
+              <img class="img-responsive" src="Images/momo-1.jpg"/>
+              <img class="img-responsive" src="Images/sadeko-momo.jpg"/>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
 
       <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
