social media icons and map embed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       />
 
       <link rel="stylesheet" href="CSS/style.css"/>
-      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet"/>  
+      <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico&display=swap" rel="stylesheet"/> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   </head>
 
   <body>
@@ -96,15 +97,15 @@
 
       <div class="container contact-container">
           <div class="row">
-            <div class="col-md-3 contact1">
+            <div class="col-md-3 contact1 align-self-center">
               <p class="contact-heading">Contact</p>
-              <p>2345 Hill Ave</p>
+              <p>205 lorem ipsum Ave</p>
               <p>Regina, Saskatchewan</p>
               <p>ASD 345</p>
               <p>momohouse@gmail.com</p>
             </div>
 
-            <div class="col-md-3 contact2">
+            <div class="col-md-3 contact2 align-self-center">
               <p class="contact-heading">Opening Hours</p>
               <p>Monday-Fridays</p>
               <p>10:00AM - 9:00PM</p>
@@ -112,7 +113,7 @@
               <p>12:00AM - 8:00PM</p>
             </div>
             <div class="col-md-6 map">
-              <img src="Images/background-3.jpg"/>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81281.79088771135!2d-104.70544846425483!3d50.4586825209846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x531c1e40fba53deb%3A0x354a3296b77b54b1!2sRegina%2C%20SK!5e0!3m2!1sen!2sca!4v1586104850387!5m2!1sen!2sca" width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>>
             </div>
           </div>          
       </div>
@@ -122,29 +123,28 @@
         <div class="row gallery-row">
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
-            <img class="img-responsive" src="Images/momo-7.jpg"/>
-            <img class="img-responsive" src="Images/momo-2.jpg"/>
-
-
-
+             <img class="img-responsive" src="Images/momo-7.jpg"/>
+             <img class="img-responsive" src="Images/momo-2.jpg"/>
             </div>
           </div>
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
               <img class="img-responsive" src="Images/momo-5.jpg"/>
-
               <img class="img-responsive"src="Images/momo-4.jpg"/>
-
             </div>
           </div>
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
               <img class="img-responsive" src="Images/momo-1.jpg"/>
               <img class="img-responsive" src="Images/sadeko-momo.jpg"/>
-
-
             </div>
           </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-instagram"></a>
         </div>
       </div>
 
