adding node to project\

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"
       />
 
-      <link rel="stylesheet" href="CSS/style.css"/>
+      <link rel="stylesheet" href="/assets/CSS/style.css"/>
       <link href="https://fonts.googleapis.com/css?family=Monoton|Pacifico|Marck+Script&display=swap" rel="stylesheet"/> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   </head>
@@ -23,7 +23,7 @@
       <div class="container-fluid banner text-center">
           <div class="row">
             <div class="col align-self-center">
-                <img src="Images/logo-8.png">
+                <img src="/assets/Images/logo-8.png">
             </div>
         </div>
       </div>
@@ -123,20 +123,20 @@
         <div class="row gallery-row">
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
-             <img class="img-responsive" src="Images/momo-7.jpg"/>
-             <img class="img-responsive" src="Images/momo-2.jpg"/>
+             <img class="img-responsive" src="assets/Images/momo-7.jpg"/>
+             <img class="img-responsive" src="assets/Images/momo-2.jpg"/>
             </div>
           </div>
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
-              <img class="img-responsive" src="Images/momo-5.jpg"/>
-              <img class="img-responsive"src="Images/momo-4.jpg"/>
+              <img class="img-responsive" src="assets/Images/momo-5.jpg"/>
+              <img class="img-responsive"src="assets/Images/momo-4.jpg"/>
             </div>
           </div>
           <div class="col-md-4 gallery-item">
             <div class="thumbnail">
-              <img class="img-responsive" src="Images/momo-1.jpg"/>
-              <img class="img-responsive" src="Images/sadeko-momo.jpg"/>
+              <img class="img-responsive" src="assets/Images/momo-1.jpg"/>
+              <img class="img-responsive" src="assets/Images/sadeko-momo.jpg"/>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
           <h1>Menu</h1>
         </div>
         <div class="row menu-item-container justify-content-center">
-          <h3 class="menu-item">Momo 1</h3><span class="menu-item-span"> loremlorem ipsum lorem ipsumlorem ipsum lorem ipsumlorem ipsum lorem ipsum ipsum lorem lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsum [12] </span>
+          <h3 class="menu-item">Momo 1</h3><span class="menu-item-span"> Heelo seeing if I can read thsm ipsum lorem ipsumlorem ipsum lorem ipsum ipsum lorem lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsum [12] </span>
         </div>
         <div class="row menu-item-container justify-content-center">
           <h3 class="menu-item">Momo 1</h3><span class="menu-item-span"> loremlorem ipsum lorem ipsumlorem ipsum lorem ipsumlorem ipsum lorem ipsum ipsum lorem lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsum [12] </span>
