Internak links to Menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link active" href="#">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu </a>
+                        <a class="nav-link" href="#menu-header-row">Menu </a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="#">Order</a>
@@ -149,8 +149,10 @@
       </div>
 
       <div class="container menu-container">
-        <div class="row menu-header-row justify-content-center">
-          <h1>Menu</h1>
+        <div class="row justify-content-center">
+          <a id="menu-header-row">
+            <h1>Menu</h1>
+          </a>
         </div>
         <div class="row menu-item-container justify-content-center">
           <h3 class="menu-item">Momo 1</h3><span class="menu-item-span"> Heelo seeing if I can read thsm ipsum lorem ipsumlorem ipsum lorem ipsum ipsum lorem lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsum [12] </span>
@@ -166,7 +168,6 @@
         </div>
 
       </div>
-
 
 
       <script
