Created an order page and made the route to order page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div class="container-fluid banner text-center">
           <div class="row">
             <div class="col align-self-center">
+              <a href="#">
                 <img src="/assets/Images/logo-8.png">
+                </a>
             </div>
         </div>
       </div>
@@ -43,7 +45,7 @@
                         <a class="nav-link" href="#menu-header-row">Menu </a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Order</a>
+                    <a class="nav-link" href="/order">Order</a>
                     </li>
 
                 </ul>
