--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
   </head>
 
   <body>
-      <div class="container-fluid banner text-center">
-          <div class="row">
-            <div class="col align-self-center">
-              <a href="#">
-                <img src="/assets/Images/logo-8.png">
-                </a>
-            </div>
-        </div>
+    <div class="container-fluid banner text-center">
+      <div class="row justify-content-center">
+          <a href="#">
+            <img src="/assets/Images/logo-8.png">
+          </a>
       </div>
+    </div>
 
       <div class="container-fluid menu-bar">
         <nav class="navbar navbar-expand-lg">
