login and register page

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -33,7 +33,9 @@
             <a href="/">
                 <img src="/assets/Images/logo-8.png" width="100%">
               </a>
-            <p>Hi, Guest</p>
+            <a href="/login">
+                <p>Hi, Guest</p>
+            </a>
             <li><!-- <li class="active"> -->
                 <a href="#classic-momo" aria-expanded="false">Classic Momo</a>
             </li>
