rollback point for order.html

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -26,8 +26,8 @@
 
     <div class="wrapper">
     <nav id="sidebar" class="mCustomScrollbar _mCS_1 mCS-autoHide" style="overflow: visible;">
-        <div id="mCSB_1" class="mCustomScrollBox mCS-minimal mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0">
-            <div id="mCSB_1_container" class="mCSB_container" style="position:relative; top:0; left:0;" dir="ltr">
+        <!-- <div id="mCSB_1" class="mCustomScrollBox mCS-minimal mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0"> -->
+            <!-- <div id="mCSB_1_container" class="mCSB_container" style="position:relative; top:0; left:0;" dir="ltr"> -->
 
         <ul class="list-unstyled components">
             <a href="/">
@@ -55,14 +55,13 @@
             </li>
 
         </ul> 
-    </div>
-</div>
+    <!-- </div> -->
+<!-- </div> -->
     <!-- <div id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-minimal mCSB_scrollTools_vertical" style="display: block;"><div class="mCSB_draggerContainer"><div id="mCSB_1_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 50px; height: 266px; top: 0px; display: block; max-height: 382px;"><div class="mCSB_dragger_bar" style="line-height: 50px;"></div></div><div class="mCSB_draggerRail">        
     </div> -->
-</div>
-</div>
-</nav>
-    
+<!-- </div>
+</div> -->
+</nav>   
     <div id="content">
         <nav class="navbar navbar-dark bg-dark">
                 <button type="button" id="sidebar-collapse" class="btn btn-info">
